--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
       const loadButton = document.getElementById('loadButton');
       const helpButton = document.getElementById('helpButton');
       helpButton.onclick = function() {
-        window.open('https://your-url.com', '_blank');
+        window.open('https://htmlpreview.github.io/?https://github.com/sequence345/Tree-View/blob/main/help', '_blank');
         helpButton.blur();
       };
       loadButton.onclick = function() {
