Update and rename help to help.html

--- a/help.html
+++ b/help.html
@@ -55,32 +55,33 @@
   </head>
   <body>
     <div class="content">
-      <h1>Setting up Tree View</h1>
+      <h1> Instructions</h1>
+      <h2>How to set up Tree View to display your own content.</h2>
       <hr class="thickHr">
       <div class="sectionBox">
         <div>
-          <h3>TSV table layout </h3>
+          <h3>Table layout </h3>
           <p>1. Populate table: </p>
           <ul>
-            <li> Column 1 = Item Name</li>
-            <li> Column 2 = Indentation*</li>
-            <li> Column 3 = Text</li>
-            <li> Column 4 = Image Link</li>
+            <li> Column A = Item Name</li>
+            <li> Column B = Indentation*</li>
+            <li> Column C = Text</li>
+            <li> Column D = Image Link</li>
           </ul>
           <p>*Negative values un-indent. <br> *Leave empty to accumulate a series. </p>
         </div>
         <div>
-          <img class="clickable-image" src="https://i.pinimg.com/originals/36/e9/6e/36e96e6cf1379f28a1d0b447673c8152.png" alt="An image to click on">
+          <img class="clickable-image" src="https://i.pinimg.com/originals/07/f1/5e/07f15e768903bd0884b92f03f41a714d.png" alt="An image to click on">
         </div>
       </div>
       <hr class="thickHr">
       <div class="sectionBox">
         <div>
-          <h3>Host TSV (Shown here using Google Sheets)</h3>
+          <h3>Publish to web (Shown here using Google Sheets)</h3>
           <p>2. Go to: File > Share > Publish to web</p>
         </div>
         <div>
-          <img class="clickable-image" src="https://i.pinimg.com/originals/c9/4f/0e/c94f0ee4fb5f2b6367d2e4ce9d646edb.png" alt="And another image to click on">
+          <img class="clickable-image" src="https://i.pinimg.com/originals/0f/9d/9e/0f9d9e1cdf634f78365bc26207fbb31b.png" alt="And another image to click on">
         </div>
       </div>
       <hr>
@@ -105,7 +106,7 @@
       <hr class="thickHr">
       <div class="sectionBox">
         <div>
-          <h3>Load into View Tree</h3>
+          <h3>Load into Tree View</h3>
           <p> 6. Open: <a href="https://htmlpreview.github.io/?https://github.com/sequence345/Tree-View/blob/main/index.html" target="_blank">Tree View</a>
           </p>
           <p> 7. Paste link into the input field </p>
