--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         display: flex;
         border-radius: 3px;
         margin-right: 6px;
-        border: 1px solid #000;
+        border: 1px solid #767676;
         overflow: hidden;
       }
 
@@ -416,7 +416,7 @@
       const loadButton = document.getElementById('loadButton');
       const helpButton = document.getElementById('helpButton');
       helpButton.onclick = function() {
-        window.open('https://htmlpreview.github.io/?https://github.com/sequence345/Tree-View/blob/main/help', '_blank');
+        window.open('https://htmlpreview.github.io/?https://github.com/sequence345/Tree-View/blob/main/help.html', '_blank');
         helpButton.blur();
       };
       loadButton.onclick = function() {
