--- a/help.html
+++ b/help.html
@@ -15,6 +15,7 @@
 
       img {
         margin: 7px 0px 7px 100px;
+        box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.2);
       }
 
       .content {
@@ -113,7 +114,7 @@
           <p> 8. Click 'Load'</p>
         </div>
         <div>
-          <img class="clickable-image" src="https://i.pinimg.com/originals/4e/c1/57/4ec157f44ee1c9713011bef02188938e.png" alt="An image to click on">
+          <img class="clickable-image" src="https://i.pinimg.com/originals/74/d2/d0/74d2d07b36126762bcb7b7182c47f7f8.png" alt="An image to click on">
         </div>
       </div>
       <div id="popup" class="popup">
