--- a/help.html
+++ b/help.html
@@ -110,7 +110,7 @@
           <h3>Load into the Tree View website</h3>
           <p> 6. Open: <a href="https://htmlpreview.github.io/?https://github.com/sequence345/Tree-View/blob/main/index.html" target="_blank">Tree View</a>
           </p>
-          <p> 7. Paste link into the input field </p>
+          <p> 7. Paste link into the input-field </p>
           <p> 8. Click 'Load'</p>
         </div>
         <div>
